# mprpc

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/Callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/Caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
